# ferrovex

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  semantic-store.d.ts  semantic-store.js
.github/workflows/: bootstrap-release.yml  release.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build-native.js  prepare.js  smoke-test.js
src/: lib.rs
