[package]
name = "ferrovex_embeddings"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Rust semantic store with TypeScript bindings backed by embed_anything and LanceDB"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["onnx"]
onnx = ["embed_anything/ort"]
metal = ["embed_anything/metal"]

[dependencies]
anyhow = "1.0"
arrow-array = "57.2"
arrow-schema = "57.2"
embed_anything = { version = "0.6.7", default-features = true }
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"
futures = "0.3"
lancedb = "0.26.2"
napi = { version = "2.16", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
napi-build = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = "=0.9.1"
metal = "=0.27.0"
